[package]
name = "ustc_reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13"
serde_json = "1"
tesseract = "0.12"
image = "0.24"
imageproc = "0.23"
