[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2"
anyhow = "1.0"
base64 = "0.13"
photon-rs = "0.3"
prost = "0.10"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
percent-encoding = "2"

[build-dependencies]
prost-build = "0.10"
