[package]
name = "warp_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[dev-dependencies]
pretty_env_logger = "0.4.0"
serde = "1"
serde_derive = "1"
